--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         }
         .logo img {
             max-width: 180px;
+            border-radius: 12px;
         }
         .progress-bar {
             background-color: #F29266;
@@ -112,7 +113,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="logo-placeholder.png" alt="FlorenceAI Logo">
+            <img src="https://via.placeholder.com/180x50?text=FlorenceAI+Logo" alt="FlorenceAI Logo">
         </div>
         <div class="progress-bar"></div>
         <h1>Welcome to FlorenceAI</h1>
