--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Clear Sans', sans-serif;
-            background-color: #FFFFF0;
+            background-color: #FFFFF;
             color: #333;
             margin: 0;
             padding: 0;
@@ -123,8 +123,8 @@
             <img src="https://via.placeholder.com/180x50?text=FlorenceAI+Logo" alt="FlorenceAI Logo">
         </div>
         <div class="progress-bar"></div>
-        <h1>Welcome to FlorenceAI</h1>
-        <p>Your financial journey starts here. Let's get you securely onboarded!</p>
+        <h1>Welcome to FlorenceAI!</h1>
+        <p>Your Financial Journey Starts Here! Let's Get You Securely Onboarded!</p>
         <div class="social-login">
             <button id="facebookLogin">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook Logo">
