--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             margin: 20px 0;
         }
         .social-login button {
-            background-color: #50C878;
+            background-color: transparent;
             border: none;
             padding: 12px 25px;
-            color: #FFF;
+            color: #333;
             border-radius: 6px;
             font-size: 16px;
             cursor: pointer;
@@ -73,7 +73,7 @@
             height: 20px;
         }
         .social-login button:hover {
-            background-color: #409763;
+            background-color: #e0e0e0;
         }
         .alternative-option {
             text-align: center;
@@ -135,7 +135,7 @@
                 Login with LinkedIn
             </button>
             <button id="googleLogin">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Logo_2013_Google.png" alt="Google Logo">
                 Login with Google
             </button>
         </div>
