--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             transition: background-color 0.3s ease;
         }
         .social-login button img {
-            width: 20px;
-            height: 20px;
+            width: 40px;
+            height: px;
         }
         .social-login button:hover {
             background-color: #e0e0e0;
@@ -136,7 +136,7 @@
             </button>
             <button id="googleLogin">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Logo_2013_Google.png" alt="Google Logo">
-                Login with Google
+        Login with Google
             </button>
         </div>
         <div class="alternative-option">
